# pomopatch-hackwashu-2025

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: Dockerfile  package.json  railway.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: database.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: plants.py  users.py
apps/web/: index.html  package.json
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx  GameWrapper.tsx  providers.tsx
apps/web/src/features/auth/: LandingPage.tsx
apps/web/src/services/: api.ts
public/Sprites/: BerryAncient.ase  BerryBlue.ase  BerryStraw.ase  PinkRose.ase  RedRose.ase  WItheredRose.ase  WhiteRose.ase
public/Sprites/UI/: rainlogo.aseprite
src/: App.tsx  AppWrapper.tsx  GameWrapper.tsx  LandingPage.tsx  SSOCallback.tsx  api.ts  globals.css  main.tsx
src-python/: main.py
src-tauri/: tauri.conf.json
